# pathcensus

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pylintrc  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  links.rst  modules.rst  pathcensus.core.rst  pathcensus.nullmodels.rst  pathcensus.rst  refs.bib
docs/sections/: about.rst  citation.rst  coefficients.rst  graphs.rst  inference.rst  installation.rst  nullmodels.rst  overview.rst
examples/: 1-motif-counting-tests.ipynb  2-null-model-tests.ipynb  3-inference-tests.ipynb  4-er-random-graphs.ipynb
pathcensus/: __init__.py  definitions.py  graph.py  inference.py  pathcensus.py  types.py  utils.py
pathcensus/core/: graph.py  parallel.py  random.py  types.py
pathcensus/nullmodels/: __init__.py  base.py  ubcm.py  uecm.py
tests/: conftest.py  test_graph.py  test_inference.py  test_nullmodels.py  utils.py
tests/core/: test_graph.py  test_parallel.py
tests/unweighted/: conftest.py  test_pathcensus.py  test_theory.py
tests/weighted/: conftest.py  test_pathcensus.py
