[metadata]
name = pathcensus
version = 0.1
author = Szymon Talaga
author_email = stalaga@protonmail.com
description =
    Structural similarity and complementarity coefficients for undirected networks
    based on efficient counting of 2- and 3-paths and 3- and 4-cycles
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sztal/pathcensus
project_urls =
    Source = https://github.com/sztal/pathcensus
    Bug Tracker = https://github.com/sztal/pathcensus/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    License :: OSI Approved :: MIT Licences
    Operating System :: OS Independent
keywords =
    networks
    graphs
    undirected
    weighted
    bipartite
    network science
    network geometry
    triples
    quadruples
    triangles
    quadrangles
    path census
    motifs
    relational principles
    homophily
    similarity
    complementarity
    structural equivalence
    random geometric graph
    latent space model
    exponential random graph
    ergm

[options]
package_dir =
    pathcensus = pathcensus
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    numba>=0.50
    scipy>=1.7
    pandas>=1.3
    statsmodels>=0.12
    NEMtropy>=2.0
    tqdm>=4.62
tests_require =
    ipython>=7.26
    pylint>=2.9
    pytest>=6.2
    pytest-runner>=5.3
    pytest-pylint>=0.18
    pytest-cov>=3.0.0
    python-igraph>=0.9
    networkx>=2.6
test_suite = tests

[aliases]
test = pytest
